[gd_scene load_steps=4 format=3 uid="uid://dpbpg5ivmee3x"]

[ext_resource type="Script" path="res://Player/bomb.gd" id="1_kqly5"]
[ext_resource type="Texture2D" uid="uid://b2jbq0jup6vbk" path="res://assets/Bomb.png" id="1_m5w82"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tmuk2"]
radius = 54.3415

[node name="bomb" type="Area2D"]
script = ExtResource("1_kqly5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_m5w82")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(4, -24.4, 4, -19.3, 9.3, -7, 11.4, -7, 27.3, -0.200001, 26.6, 3, 24.1, 3, 10, 6.5, 10, 7.1, 7, 9.1, 7, 12.2, 3.6, 26, 1.5, 26, -3, 28.2, -3, 24.4, -9.4, 7, -12.4, 7, -27.3, 1.3, -26.7, -2, -24.3, -2, -7, -9.3, -7, -11.3, -3, -23.3, -3, -26.8)

[node name="Timer" type="Timer" parent="."]

[node name="blast" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="blast"]
shape = SubResource("CircleShape2D_tmuk2")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="blast" to="." method="_on_blast_body_entered"]
[connection signal="body_exited" from="blast" to="." method="_on_blast_body_exited"]
